# readnewick

./: Cargo.toml  flame.sh  primates_cytb_JC_run_1.trees  primates_cytb_JC_run_2.trees  readme.md  ungulates.tre
src/: linecount.rs  main.rs  parser.rs  parser2.rs  splits.rs  taxonlabels.rs  tokenizer.rs  tree.rs  utils.rs
