[package]
name = "readnewick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
microbench = "0.5.0"
bitvec = "1.0.1"
indicatif = "0.17.8"
bytecount = "0.6.8"
once_cell = "1.19.0"
clap = { version = "4.5.4", features = ["derive"] }
wild = "2.2.1"
