[package]
name = "splitfrequencies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
bitvec = "1.0.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
bytecount = "0.6.8"
once_cell = "1.19.0"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
fasthash = "0.4.0"
rayon = "1.10.0"
